<resources>
    <string name="app_name">My Application</string>
    <string name="txt_fastbooking">Đặt bàn nhanh</string>
    <string name="txt_desc_fastbooking">Tìm và đặt bàn bi-a tại CLB yêu thích</string>
    <string name="btn_txt_fastbooking">Đặt Bàn Ngay</string>
    <string name="txt_title_outstanding">Câu lạc bộ gần bạn</string>
    <string name="txt_tournament">Giải đấu</string>
    <string name="txt_desc_tournament">Tham gia ngay</string>
    <string name="txt_order">Đặt bàn</string>
    <string name="txt_shop_title">Đặt bàn Bi-a</string>
    <string name="txt_title_select_game">Chọn ngày</string>
    <string name="txt_select_game">Chọn thể loại game</string>
    <string name="btn_select_time">Button</string>
    <string name="txt_number_peopel_title">Số người chơi</string>
    <string name="txt_sum_peopel">1 người</string>
    <string name="btn_confirm_booking">Xác nhận đặt bàn</string>
    <string name="btn_SpecialOfferReceive">Nhận ngay</string>
    <string name="txt_email">Email</string>
    <string name="txt_desc_login">Không có tài khoản?</string>
    <string name="txt_or">hoặc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment111</string>
    <string name="txt_signup">Đăng Ký</string>
    <string name="txt_name">Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_copy_voucher">Áp mã giảm giá</string>
    <string name="txt_voucher">DTP17</string>
    <string name="txt_date_voucher">Ngày: 1/9/2025 - 20/9/2025</string>
    <string name="txt_clb_voucher">Cơ sở: Hà Nội</string>
    <string name="txt_title_voucher">Giảm 30% cho thành viên mới</string>
    <string name="step_title_3">Bước 3</string>
    <string name="step_title_2">Bước 2</string>
    <string name="step_title_1">Bước 1</string>
    <string name="des_title_upgrade">Trở thành chủ cửa hàng bi-a và mở rộng kinh doanh</string>
    <string name="txt_title_upgrade">Nâng cấp tài khoản</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="s_i_n_thoai">Số điện thoai</string>
    <string name="_035_56">035...56</string>
    <string name="ng_y_sinh">Ngày sinh</string>
    <string name="_1_1_2025">1/1/2025</string>
    <string name="l_u_thay_i">Lưu thay đổi</string>
    <string name="h_nh_nh_n_t_quay_l_i">Hình ảnh nút quay lại</string>
    <string name="l_ch_s_t_b_n">Lịch sử đặt bàn</string>
    <string name="ph_ng_th_c_thanh_to_n">Phương thức thanh toán</string>

</resources>