<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/bg_voucher"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/titleVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_txt_title_22sp"
        android:text="@string/txt_title_voucher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/clbVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/dimen_txt_20sp"
        android:text="@string/txt_clb_voucher"
        app:layout_constraintTop_toBottomOf="@+id/titleVoucher"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dateVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/dimen_txt_20sp"
        android:text="@string/txt_date_voucher"
        app:layout_constraintTop_toBottomOf="@+id/clbVoucher"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/voucherCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_violet"
        android:backgroundTint="@color/color_xanhnhat"
        android:textColor="@color/colorMain"
        android:layout_marginTop="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="25dp"
        android:textSize="@dimen/dimen_txt_20sp"
        android:text="@string/txt_voucher"
        app:layout_constraintTop_toBottomOf="@+id/dateVoucher"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/copyVoucherCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_txt_20sp"
        android:text="@string/txt_copy_voucher"
        android:background="@android:color/transparent"
        android:textColor="@color/color_xanhnhat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateVoucher" />

</androidx.constraintlayout.widget.ConstraintLayout>