<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_voucher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/titleVoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_txt_title_22sp"
            android:text="@string/txt_title_voucher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/clbVoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/dimen_txt_20sp"
            android:text="@string/txt_clb_voucher"
            app:layout_constraintTop_toBottomOf="@+id/titleVoucher"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/dateVoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/dimen_txt_20sp"
            android:text="@string/txt_date_voucher"
            app:layout_constraintTop_toBottomOf="@+id/clbVoucher"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/voucherCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_violet"
            android:layout_marginTop="5dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="25dp"
            android:textSize="@dimen/dimen_txt_20sp"
            android:text="@string/txt_voucher"
            app:layout_constraintTop_toBottomOf="@+id/dateVoucher"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditVoucher"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Chỉnh sửa"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/ColorWhite"
            android:textSize="10dp"
            android:background="@drawable/bg_btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/dateVoucher"
            app:layout_constraintRight_toLeftOf="@+id/btnRefuseRealtime"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRefuseRealtime"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="10dp"
            android:background="@drawable/bg_btn_refuse"
            android:textColor="@color/ColorWhite"
            android:layout_marginTop="10dp"
            android:text="Xoá"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateVoucher"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>