<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Admin.FragmentUpgrade">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_upgrade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivHeaderUpgrade"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/icons8crown100"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtHeaderUpgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/dimen_txt_title_22sp"
                android:text="@string/txt_title_upgrade"
                android:textColor="@color/ColorWhite"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivHeaderUpgrade"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/dimen_txt_16sp"
                android:text="@string/des_title_upgrade"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHeaderUpgrade"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stepIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_xanhngoc"
            android:padding="15dp"
            android:layout_marginTop="-15dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/ivStep1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/icons8crown35"
                android:background="@drawable/bg_upgrade_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/step1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/step_title_1"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/ColorOrgrien"
                app:layout_constraintLeft_toRightOf="@+id/ivStep1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/ivArrow1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/icons8rightarrow50"
                app:layout_constraintLeft_toRightOf="@+id/step1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/ivStep2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_upgrade_white"
                android:padding="10dp"
                android:src="@drawable/icons8shield35"
                app:layout_constraintLeft_toRightOf="@id/ivArrow1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/step2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/step_title_2"
                android:gravity="center"
                android:textColor="@color/ColorOrgrien"
                app:layout_constraintLeft_toRightOf="@+id/ivStep2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/ivArrow2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/icons8rightarrow50"
                app:layout_constraintLeft_toRightOf="@+id/step2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <ImageView
                android:id="@+id/ivStep3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_upgrade_white"
                android:padding="10dp"
                android:src="@drawable/icons8card24"
                app:layout_constraintLeft_toRightOf="@+id/ivArrow2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/step3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/step_title_3"
                android:gravity="center"
                android:textColor="@color/ColorOrgrien"
                app:layout_constraintLeft_toRightOf="@+id/ivStep3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepIndicator"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_step"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBack"
                android:minWidth="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_btn_txt_15sp"
                android:background="@drawable/bg_xamxanh"
                android:text="Quay lại"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:minWidth="150dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_btn_txt_15sp"
                android:background="@drawable/bg_orange"
                android:padding="10dp"
                android:text="tiếp theo"
                android:layout_marginRight="10dp"
                android:textColor="@color/ColorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>